# rtl8812au-vtx

./: .gitignore  CMakeLists.txt  Makefile  _set_debug.bat  before-install-pi.sh  build_chroot.sh  buildcross.sh  conanfile.txt  install_only.sh  libusb_demo.cpp  libusb_demo.h  main.c  main.cpp  print_parameters.sh  run_example.bat
.github/workflows/: autocompiler.yml  build_for_pi.yml  build_for_x20.yml  build_x20.yml  crosscompile_Rock5.yml
core/: rtw_cmd.c  rtw_mlme_ext.c
core/efuse/: rtw_efuse.c
hal/: hal_com.c  hal_com_phycfg.c  hal_dm.c  hal_intf.c
hal/led/: hal_usb_led.c
hal/phydm/: phydm_phystatus.c
hal/rtl8812a/: rtl8812a_hal_init.c  rtl8812a_phycfg.c
hal/rtl8812a/usb/: rtl8812au_led.c  rtl8812au_xmit.c  usb_halinit.c
hal/rtl8814a/: rtl8814a_hal_init.c
hal/rtl8814a/usb/: usb_halinit.c
include/: basic_types.h  drv_types.h  osdep_service.h  osdep_service_bsd.h  osdep_service_linux.h  rtw_eeprom.h  rtw_efuse.h  rtw_version.h
os_dep/linux/: ioctl_cfg80211.c  ioctl_linux.c  os_intfs.c  usb_intf.c
packagedir/etc/systemd/system/: rtl8812auEasyCompile.service
